# ChangeLog for dev-libs/liboil
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/liboil/ChangeLog,v 1.73 2009/03/08 12:04:58 eva Exp $

*liboil-0.3.15-r1 (08 Mar 2009)

  08 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +liboil-0.3.15-r1.ebuild:
  Bump to 0.3.5-r1.
   * Don't build tests if not requested, bug #226219.
   * Don't build examples if not requested bug #226303.
   * Don't depend on glib if examples are not built, bug #204002.
   * Don't forced uneeded make -j1, bug #236012.

  08 Mar 2009; Joshua Kinard <kumba@gentoo.org> liboil-0.3.15.ebuild:
  Added ~mips to KEYWORDS.

  25 Dec 2008; <ssuominen@gentoo.org> metadata.xml:
  Reassign to freedesktop herd.

  02 Nov 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing zaheerm as a maintainer since he was retired.

  04 Oct 2008; Brent Baude <ranger@gentoo.org> liboil-0.3.15.ebuild:
  Marking liboil-0.3.15 ppc64 for bug 232054

  23 Sep 2008; Jeroen Roovers <jer@gentoo.org> liboil-0.3.15.ebuild:
  Stable for HPPA (bug #232054).

  07 Aug 2008; Tobias Klausmann <klausman@gentoo.org> ChangeLog:
  Stable on alpha, bug #232054

  31 Jul 2008; Raúl Porcel <armin76@gentoo.org> liboil-0.3.15.ebuild:
  alpha/ia64/sparc/x86 stable wrt #232054

  30 Jul 2008; Brent Baude <ranger@gentoo.org> liboil-0.3.15.ebuild:
  Marking liboil-0.3.15 ppc stable for bug 232054

  26 Jul 2008; Olivier Crête <tester@gentoo.org> liboil-0.3.15.ebuild:
  Stable on amd64, bug #232054

*liboil-0.3.15 (02 Jul 2008)

  02 Jul 2008; Samuli Suominen <drac@gentoo.org> +liboil-0.3.15.ebuild:
  Version bump.

  16 Apr 2008; Markus Rothe <corsair@gentoo.org> liboil-0.3.14.ebuild:
  Added ~ppc64; bug #175420

*liboil-0.3.14 (03 Apr 2008)

  03 Apr 2008; Zaheer Abbas Merali <zaheerm@gentoo.org> +liboil-0.3.14.ebuild:
  version bump

  12 Feb 2008; Diego Pettenò <flameeyes@gentoo.org>