@@ -1,5 +1,7 @@
 DIST liboil-0.3.15.tar.gz 822195 RMD160 ba6a4889dd8c16f62dee5c238e019b42066e6a9b SHA1 8791e3399aae619b89a1d00f40ffcafc7d7f5d9b SHA256 ae5e3b03a72dd4d12accbe7a6022e4e8570fa309defec9846341384d0a657fd4
+DIST liboil-0.3.16.tar.gz 855765 RMD160 5add00151e24ee8cc5a8dfb40223936a576cbffd SHA1 0d6530ccb22d805c5209a185a94b575111ec34f3 SHA256 009115b0fc888dfe28903fecfe806707c544ccad6554ebabdeb3a1d88ec1e9d1
 EBUILD liboil-0.3.15-r1.ebuild 1483 RMD160 37975d489fb5d4234d17c669de260f7698c404aa SHA1 989e1fa14e498f5afce0e27b86d8360e043a3bf2 SHA256 85ff9869a9e500886ee5fdff8f27a2bf71c6d859ca9cb2ede360abe54d3626a2
 EBUILD liboil-0.3.15.ebuild 960 RMD160 fa7924fd92d6afd83db84701a5773185cf4ec9a1 SHA1 f225ffc874523dd7e8cfe8536dd804e113a244f8 SHA256 42ad43fc3ec09a00130217622e22e84ba19059731917d012874ce33bca162e8d
-MISC ChangeLog 8883 RMD160 fba247447421a471670cd53fbc27e5f6f5fc0859 SHA1 a7fe926d1f6327b414b086aca1e16cf7664ad324 SHA256 ca68c5bce5648605fce23c387d70d2f26b3a4da18539a3ff3b84d9b4cc71443e
+EBUILD liboil-0.3.16.ebuild 1483 RMD160 f7c6022e4cdd096f25e36356f999ee66c9f96ed0 SHA1 053d72742c6308bd0660fd6cc4ee38caa52c316a SHA256 5c466f9ea27ea9f926991a68e78a741143db4e21a8692ec4350c19eacd0563a9
+MISC ChangeLog 9003 RMD160 a90922b5d86785ffc9814f32f23c2e278a7d2cec SHA1 1ff45d2e08c4b641a79e2a01b2363ea8009076e2 SHA256 e0f739ebda91e0669fb0049883e3eaf8a3c869c586acf5361ceef9f1d60da7dd
 MISC metadata.xml 239 RMD160 43d9aecb8e923b569a18ae6e5aab55ef9438394a SHA1 6a98c4a7d62e030d70f279a318b00dc1079a56f6 SHA256 5d929c534d63615358eacbd035a386109d5deebdc7bb562511b4a6338ee2bbb8
