@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/liboil
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/liboil/ChangeLog,v 1.73 2009/03/08 12:04:58 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/liboil/ChangeLog,v 1.74 2009/04/05 22:49:56 yngwin Exp $
+
+*liboil-0.3.16 (05 Apr 2009)
+
+  05 Apr 2009; Ben de Groot <yngwin@gentoo.org> +liboil-0.3.16.ebuild:
+  Version bump
 
 *liboil-0.3.15-r1 (08 Mar 2009)
 
